[gd_scene load_steps=8 format=3 uid="uid://mp60lf0hkju"]

[ext_resource type="Script" path="res://scenes/ui/main_menu/main_menu.gd" id="1_surcd"]
[ext_resource type="Theme" uid="uid://kwjdqgscw3n" path="res://scenes/main_menu_theme.tres" id="2_bjm2v"]
[ext_resource type="AudioStream" uid="uid://cx4mpphr0m47l" path="res://art/musicAndSounds/GatewayToGehennom.wav" id="2_i1euc"]
[ext_resource type="PackedScene" uid="uid://c3pwji2525lua" path="res://scenes/ui/card_tooltip.tscn" id="3_viodo"]
[ext_resource type="Script" path="res://scenes/saver_loader.gd" id="4_f2g6x"]
[ext_resource type="PackedScene" uid="uid://ctpn4sdlu8mdk" path="res://scenes/ui/card_pile_display.tscn" id="5_oowr1"]
[ext_resource type="PackedScene" uid="uid://crojvnao1onf7" path="res://scenes/ui/settings_display.tscn" id="7_l02im"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_surcd")
music = ExtResource("2_i1euc")

[node name="Panel" type="Panel" parent="."]
offset_right = 320.0
offset_bottom = 180.0
scale = Vector2(2, 2)
theme = ExtResource("2_bjm2v")

[node name="LocationContainer" type="HBoxContainer" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -9.5
offset_right = -2.0
offset_bottom = -9.5
grow_horizontal = 2
grow_vertical = 2

[node name="SeeDeckPileButton" type="Button" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -18.0
offset_right = 31.0
offset_bottom = -6.0
grow_vertical = 0
text = "Deck"

[node name="SeeSettingButton" type="Button" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -18.0
offset_right = -5.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
text = "Settings"

[node name="CardTooltip" parent="Panel" instance=ExtResource("3_viodo")]
z_index = 5
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_top = 6.0
offset_right = 55.0
offset_bottom = 46.0
grow_horizontal = 2
scale = Vector2(1, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.5
offset_top = -47.0
offset_right = 55.5
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="NewRunButton" type="Button" parent="Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Start new run"

[node name="ExitButton" type="Button" parent="Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit"

[node name="SaverLoader" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_f2g6x")

[node name="CardPileDisplay" parent="." instance=ExtResource("5_oowr1")]
unique_name_in_owner = true
visible = false

[node name="SettingsDisplay" parent="." instance=ExtResource("7_l02im")]
unique_name_in_owner = true
layer = 2
visible = false
